Add gh-pages to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rich-text-editor",
   "version": "0.1.0",
+  "homepage": "alberoneramos.github.io/rich-text-editor",
   "private": true,
   "dependencies": {
     "@convertkit/slate-keymap": "^0.1.9",
@@ -46,7 +47,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -73,6 +76,7 @@
     "eslint-plugin-react": "7.14.2",
     "eslint-plugin-react-hooks": "^2.2.0",
     "flow-bin": "0.102.0",
+    "gh-pages": "^2.1.1",
     "jest-localstorage-mock": "^2.4.0",
     "lint-staged": "^9.2.1",
     "moxios": "^0.4.0",
