--- a/package.json
+++ b/package.json
@@ -4,51 +4,22 @@
   "homepage": "alberoneramos.github.io/rich-text-editor",
   "private": true,
   "dependencies": {
-    "@convertkit/slate-keymap": "^0.1.9",
-    "@gitbook/slate": "^4.0.0",
-    "@gitbook/slate-edit-code": "^4.0.0",
-    "@gitbook/slate-prism": "^4.0.0",
-    "@gitbook/slate-react": "^4.0.0",
-    "@wikifactory/slate-edit-code": "^0.16.0",
     "classnames": "^2.2.6",
-    "draft-js": "^0.11.1",
-    "feather-icons": "^4.24.1",
-    "golery-slate-prism": "^0.6.0-golery.2",
+    "feather-icons": "^4.25.0",
     "immutable": "^4.0.0-rc.12",
     "is-hotkey": "^0.1.6",
-    "markdown-draft-js": "^2.1.1",
     "node-sass": "^4.13.0",
-    "prismjs": "^1.17.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-draft-wysiwyg": "^1.13.2",
-    "react-icons-kit": "^1.3.1",
-    "react-markdown": "^4.2.2",
-    "react-modal": "^3.11.1",
-    "react-scripts": "3.2.0",
-    "rich-markdown-editor": "^9.8.9",
-    "slate": "^0.47.8",
-    "slate-auto-replace": "^0.12.1",
-    "slate-code": "^1.0.0",
-    "slate-collapse-on-escape": "^0.8.1",
-    "slate-drop-or-paste-images": "^0.9.1",
-    "slate-edit-code": "^0.15.5",
-    "slate-hotkeys": "^0.2.9",
-    "slate-lists": "^1.0.0",
-    "slate-mark-hotkeys": "^0.2.0",
-    "slate-paste-linkify": "^0.7.0",
-    "slate-prism": "^0.5.0",
-    "slate-prop-types": "^0.5.41",
-    "slate-react": "^0.22.9",
-    "slate-soft-break": "^0.9.0",
-    "slate-when": "^0.2.0"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
+    "react-scripts": "3.3.0",
+    "slate": "^0.53.0",
+    "slate-react": "^0.53.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -67,22 +38,22 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "16.8.4",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-import": "^2.18.0",
+    "@types/react-dom": "16.9.4",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "7.14.2",
-    "eslint-plugin-react-hooks": "^2.2.0",
-    "flow-bin": "0.102.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "flow-bin": "0.113.0",
     "gh-pages": "^2.1.1",
     "jest-localstorage-mock": "^2.4.0",
-    "lint-staged": "^9.2.1",
+    "lint-staged": "^9.5.0",
     "moxios": "^0.4.0",
     "pre-commit": "^1.2.2",
-    "prettier": "^1.18.2",
-    "react-styleguidist": "^9.1.11",
+    "prettier": "^1.19.1",
+    "react-styleguidist": "^10.3.0",
     "redux-mock-store": "^1.5.3"
   }
 }
