--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
-    "feather-icons": "^4.25.0",
     "immutable": "^4.0.0-rc.12",
     "is-hotkey": "^0.1.6",
     "node-sass": "^4.13.0",
+    "prism-react-renderer": "^1.0.2",
+    "prismjs": "^1.17.1",
     "react": "^16.12.0",
+    "react-color": "^2.17.3",
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
     "react-scripts": "3.3.0",
-    "slate": "^0.53.0",
-    "slate-react": "^0.53.0"
+    "slate": "^0.54.3",
+    "slate-history": "^0.54.3",
+    "slate-react": "^0.54.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,14 +49,8 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
-    "flow-bin": "0.113.0",
+    "flow-bin": "0.114.0",
     "gh-pages": "^2.1.1",
-    "jest-localstorage-mock": "^2.4.0",
-    "lint-staged": "^9.5.0",
-    "moxios": "^0.4.0",
-    "pre-commit": "^1.2.2",
-    "prettier": "^1.19.1",
-    "react-styleguidist": "^10.3.0",
-    "redux-mock-store": "^1.5.3"
+    "prettier": "^1.19.1"
   }
 }
