--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
+    "draft-js": "^0.11.3",
+    "draft-js-drag-n-drop-plugin": "^2.0.4",
+    "draft-js-hashtag-plugin": "^2.0.4",
+    "draft-js-image-plugin": "^2.0.7",
+    "draft-js-linkify-plugin": "^2.0.2",
+    "draft-js-plugins-editor": "^3.0.0",
+    "draft-js-prism": "^1.0.6",
+    "draft-js-prism-plugin": "^0.1.3",
     "immutable": "^4.0.0-rc.12",
     "is-hotkey": "^0.1.6",
     "node-sass": "^4.13.0",
