--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "homepage": "alberoneramos.github.io/rich-text-editor",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "draft-js": "^0.11.3",
     "draft-js-drag-n-drop-plugin": "^2.0.4",
     "draft-js-hashtag-plugin": "^2.0.4",
     "draft-js-image-plugin": "^2.0.7",
+    "draft-js-inline-toolbar-plugin": "^3.0.1",
     "draft-js-linkify-plugin": "^2.0.2",
     "draft-js-plugins-editor": "^3.0.0",
     "draft-js-prism": "^1.0.6",
     "draft-js-prism-plugin": "^0.1.3",
     "immutable": "^4.0.0-rc.12",
+    "immutable-js": "^0.3.1-6",
     "is-hotkey": "^0.1.6",
     "node-sass": "^4.13.0",
     "prism-react-renderer": "^1.0.2",
