--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "draft-js-plugins-editor": "^3.0.0",
     "draft-js-prism": "^1.0.6",
     "draft-js-prism-plugin": "^0.1.3",
+    "immer": "^6.0.2",
     "immutable": "^4.0.0-rc.12",
     "immutable-js": "^0.3.1-6",
     "is-hotkey": "^0.1.6",
@@ -25,13 +26,13 @@
     "node-sass": "^4.13.1",
     "prism-react-renderer": "^1.0.2",
     "prismjs": "^1.19.0",
-    "react": "^16.13.0",
+    "react": "^16.13.1",
     "react-color": "^2.18.0",
-    "react-dom": "^16.13.0",
+    "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "slate": "^0.57.1",
@@ -62,15 +63,15 @@
   },
   "devDependencies": {
     "@types/react-dom": "16.9.5",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "7.18.3",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "flow-bin": "0.119.1",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "flow-bin": "0.121.0",
     "gh-pages": "^2.2.0",
-    "prettier": "^1.19.1"
+    "prettier": "^2.0.2"
   }
 }
