--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "draft-js-plugins-editor": "^3.0.0",
     "draft-js-prism": "^1.0.6",
     "draft-js-prism-plugin": "^0.1.3",
+    "image-extensions": "^1.1.0",
     "immer": "^6.0.2",
     "immutable": "^4.0.0-rc.12",
     "immutable-js": "^0.3.1-6",
@@ -28,6 +29,7 @@
     "prismjs": "^1.19.0",
     "react": "^16.13.1",
     "react-color": "^2.18.0",
+    "react-dnd": "^10.0.2",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
     "react-redux": "^7.2.0",
