--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-color": "^2.18.0",
     "react-dnd": "^10.0.2",
     "react-dom": "^16.13.1",
+    "react-fast-compare": "^3.0.1",
     "react-icons": "^3.9.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
