--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rich-text-editor",
   "version": "0.1.0",
-  "homepage": "https://murmuring-everglades-31838.herokuapp.com/",
+  "homepage": "https://slate-editor.herokuapp.com/",
   "proxy": "http://localhost:4001/",
   "private": true,
   "engines": {
